--- a/config.yaml
+++ b/config.yaml
@@ -1,21 +1,21 @@
 
 service:
   is_debug: true
-  secret_key: ds@@akd12kd$xlk2@3
+  secret_key: ds@@akd12kd$xlk2@31kksnakn13)_-do10idj3-j8qeh813;mcxl'k=\13i
 
 listen:
   address: 0.0.0.0
   port: 8000
 
 storage:
-  host: db
-  port: 5437
+  host: postgres
+  port: 5432
   database: postgres
   username: postgres
   password: 1324
 
 redis:
-  address: localhost:6379
+  address: redis:6379
   password:
   db: 0
 
