--- a/config.yaml
+++ b/config.yaml
@@ -8,14 +8,14 @@ listen:
   port: 8000
 
 storage:
-  host: postgres
+  host: localhost # TODO: change to postgres
   port: 5432
-  database: postgres
+  database: makhkets
   username: postgres
   password: 1324
 
 redis:
-  address: redis:6379
+  address: localhost:6379 # TODO: change to redis
   password:
   db: 0
 
