--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -37,3 +37,6 @@ services:
     depends_on:
       postgres:
         condition: service_healthy
+
+#    command:
+#      - cd ./app/schema/ && goose postgres 'postgres://postgres:1324@postgres:5432/postgres' up
